feat: link preview url

--- a/frontend/src/style/variables/_theme-dark.scss
+++ b/frontend/src/style/variables/_theme-dark.scss
@@ -194,4 +194,6 @@
   --color-help-border: var(--color-scale-a-8-100);
 
   --color-main-branch-star: var(--color-scale-g-3-100);
+
+  --color-link-preview-bg: var(--color-scale-a-6-75);
 }
