--- a/frontend/src/style/variables/_theme-light.scss
+++ b/frontend/src/style/variables/_theme-light.scss
@@ -195,4 +195,6 @@
   --color-help-border: var(--color-scale-a-3-100);
 
   --color-main-branch-star: var(--color-scale-g-5-100);
+
+  --color-link-preview-bg: var(--color-scale-a-0-75);
 }
