refactor: reorganize scss

--- a/frontend/src/style/style.scss
+++ b/frontend/src/style/style.scss
@@ -1,40 +1,53 @@
+// Variables
+// cascade:important
 @use "variables/colors";
 @use "variables/variables";
 @use "variables/theme-dark";
 @use "variables/theme-light";
 
+// Main
+// cascade:important
 @use "main";
+@use "elements";
+@use "app";
+@use "scrollbar";
 @use "buttons";
 @use "forms";
+@use "syntax-highlight";
 
+// Components
+// cascade:alphanumeric
 @use "components/app-control";
-@use "components/title-bar";
-@use "components/modal";
-@use "components/sidebar";
-@use "components/tabs";
+@use "components/avatar";
 @use "components/changes";
-@use "components/commits";
+@use "components/code-breakdown";
 @use "components/commit";
-@use "components/commit-labels";
+@use "components/commits";
 @use "components/commit-details";
 @use "components/commit-file-changes";
+@use "components/commit-labels";
 @use "components/context-menu";
+@use "components/details";
+@use "components/diff";
+@use "components/diffs";
+@use "components/getting-started";
 @use "components/gpg-status";
-@use "components/tree";
+@use "components/info";
+@use "components/link-preview";
+@use "components/linked-commit";
+@use "components/make-commit";
+@use "components/modal";
+@use "components/rebase-actions";
 @use "components/repo-info";
 @use "components/remotes";
-@use "components/getting-started";
-@use "components/settings";
-@use "components/make-commit";
-@use "components/rebase-actions";
-@use "components/details";
-@use "components/code-breakdown";
-@use "components/diffs";
-@use "components/diff";
-@use "components/info";
 @use "components/select";
+@use "components/settings";
+@use "components/sidebar";
+@use "components/tabs";
+@use "components/title-bar";
+@use "components/tree";
 
-@use "modifiers/repo-state";
+// Modifiers
+// cascade:alphanumeric
 @use "modifiers/conventional-commits";
-
-@use "syntax-highlight";
+@use "modifiers/repo-state";
