--- a/frontend/src/style/style.scss
+++ b/frontend/src/style/style.scss
@@ -27,6 +27,7 @@
 @use "components/commit-file-changes";
 @use "components/commit-labels";
 @use "components/context-menu";
+@use "components/contributors";
 @use "components/details";
 @use "components/diff";
 @use "components/diffs";
