--- a/frontend/src/style/_buttons.scss
+++ b/frontend/src/style/_buttons.scss
@@ -26,7 +26,9 @@
       }
 
       &--spin {
-        animation: rotating 3s linear infinite;
+        svg {
+          animation: rotating 3s linear infinite;
+        }
       }
     }
   }
