feat: loading gear while git is being verified

--- a/frontend/src/style/components/_code-breakdown.scss
+++ b/frontend/src/style/components/_code-breakdown.scss
@@ -1,4 +1,4 @@
-@keyframes rotating {
+@keyframes codeBreakdownRotatingGear {
   from {
     transform: rotate(0deg);
   }
@@ -82,7 +82,7 @@
     &--loading {
       svg {
         fill: var(--color-text);
-        animation: rotating 3s linear infinite;
+        animation: codeBreakdownRotatingGear 3s linear infinite;
       }
     }
   }
