--- a/frontend/src/style/components/_sidebar.scss
+++ b/frontend/src/style/components/_sidebar.scss
@@ -5,6 +5,7 @@
   overflow: visible;
   height: 100%;
   border-right: 1px solid var(--color-sidebar-border);
+  position: relative;
 }
 
 .sidebar-big-button {
@@ -57,7 +58,7 @@
 
   .overlay {
     left: var(--sidebar-width);
-    width: calc(100% - var(--sidebar-width));
+    width: 100%;
   }
 
   &__container {
@@ -72,7 +73,7 @@
     top: 0;
     left: 0;
     height: 100%;
-    width: var(--sidebar-width);
+    width: 100%;
     display: flex;
     flex-direction: column;
   }
