--- a/frontend/src/style/_buttons.scss
+++ b/frontend/src/style/_buttons.scss
@@ -1,5 +1,14 @@
 @use "mixins" as *;
 
+@keyframes buttonRotatingIcon {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .btn {
   border: var(--btn-border);
   color: var(--color-text);
@@ -27,7 +36,7 @@
 
       &--spin {
         svg {
-          animation: rotating 3s linear infinite;
+          animation: buttonRotatingIcon 3s linear infinite;
         }
       }
     }
