--- a/frontend/src/style/variables/_variables.scss
+++ b/frontend/src/style/variables/_variables.scss
@@ -10,6 +10,8 @@
   --commit-details-height: 25vh;
   --commit-details-height-default: var(--commit-details-height);
 
+  --bg-opacity: 100%;
+
   // In Pixels!
   --commit-row-height: 24px;
 }
