fix: gravity in commit details

--- a/frontend/src/style/components/_commit-details.scss
+++ b/frontend/src/style/components/_commit-details.scss
@@ -24,7 +24,7 @@
   &__right {
     overflow-y: auto;
     border-top: 1px solid var(--color-commitdetails-border);
-    padding: 0.33rem 0.25rem;
+    padding: 0.33rem 0.25rem 0.45rem;
     box-sizing: border-box;
   }
 
