--- a/frontend/src/style/components/_settings.scss
+++ b/frontend/src/style/components/_settings.scss
@@ -6,7 +6,7 @@
   overflow-y: auto;
   height: 100%;
 
-  h2 {
+  &__title {
     margin: 0 0 1rem;
     @include no-select;
 
@@ -19,60 +19,75 @@
     }
   }
 
-  h3 {
-    margin: 1rem 0 0;
+  &__grid {
+    display: grid;
+    align-items: center;
+    grid-template-columns: min-content auto;
+  }
+
+  &__section-header {
+    margin: 1.5rem 0 0;
     padding: 0.5rem 0 0;
     border-top: 1px solid var(--color-scale-a-7-100);
     @include no-select;
   }
+}
 
-  .setting {
-    margin-bottom: 1rem;
+.setting {
+  display: contents;
 
-    &:not(:first-of-type) {
-      margin-top: 1rem;
+  &--split {
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+  }
+
+  &__split {
+    flex: 1;
+  }
+
+  &__name {
+    margin: 1rem 1rem 1rem 0;
+    color: var(--color-text-muted);
+    font-weight: normal;
+    white-space: nowrap;
+    @include no-select;
+
+    .info {
+      white-space: initial;
     }
 
-    &--split {
-      display: flex;
-      flex-direction: row;
-      gap: 2rem;
+    .settings__section--info & {
+      margin: 0.5rem 1rem 0.5rem 0;
     }
+  }
 
-    &__split {
-      flex: 1;
-    }
-  
-    &__name {
+  &__set {
+    margin: 1rem 0;
+
+    .settings__section--info & {
       margin: 0.5rem 0;
-      color: var(--color-text-muted);
-      font-weight: normal;
-      @include no-select;
     }
+  }
 
-    .text-input {
-      margin: 0.5rem 0;
+  .text-input {
+    margin: 0.5rem 0;
 
+    input[type="text"] {
+      width: 100%;
+    }
+  }
+
+  .override {
+    &.overridden {
       input[type="text"] {
-        width: 100%;
+        opacity: 0.7;
       }
     }
 
-    .checkbox {
-      margin-top: 1rem;
-    }
-
-    .override {
-      &.overridden {
-        input[type="text"] {
-          opacity: 0.7;
-        }
-      }
-
-      &.empty {
-        input[type="text"] {
-          opacity: 0.7;
-        }
+    &.empty {
+      input[type="text"] {
+        opacity: 0.7;
       }
     }
   }
@@ -81,6 +96,7 @@
 .big-option {
   display: flex;
   column-gap: 1.5rem;
+  grid-column: 1 / 3;
 
   &__option {
     flex: 1;
