--- a/frontend/src/style/variables/_theme-dark.scss
+++ b/frontend/src/style/variables/_theme-dark.scss
@@ -200,4 +200,7 @@
   --color-main-branch-star: var(--color-scale-g-3-100);
 
   --color-link-preview-bg: var(--color-scale-a-6-75);
+
+  --color-range: var(--color-scale-a-1-100);
+  --color-range-track: var(--color-scale-a-5-50);
 }
