--- a/frontend/src/style/variables/_theme-light.scss
+++ b/frontend/src/style/variables/_theme-light.scss
@@ -194,4 +194,7 @@
   --color-main-branch-star: var(--color-scale-g-5-100);
 
   --color-link-preview-bg: var(--color-scale-a-0-75);
+
+  --color-range: var(--color-scale-a-4-100);
+  --color-range-track: var(--color-scale-a-3-50);
 }
