--- a/frontend/src/style/components/_commits.scss
+++ b/frontend/src/style/components/_commits.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
   overflow: hidden;
   height: 100%;
+  overscroll-behavior-x: none;
 
   &.dragging {
     @include no-select;
@@ -13,6 +14,7 @@
   }
 
   &__table-container {
+    overscroll-behavior-x: none;
     overflow: auto;
     height: 100%;
   }
