--- a/frontend/src/style/components/_diffs.scss
+++ b/frontend/src/style/components/_diffs.scss
@@ -37,9 +37,25 @@
   padding: 4rem;
   height: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   font-family: var(--font-main);
   color: var(--color-text-muted);
   @include no-select;
+
+  &__message {
+    padding: 0.5rem;
+  }
+
+  &__icon {
+    padding: 0.5rem;
+  }
+
+  &--loading {
+    svg {
+      fill: var(--color-text);
+      animation: buttonRotatingIcon 3s linear infinite;
+    }
+  }
 }
